--- a/CRDs/ANI-CRD.yaml
+++ b/CRDs/ANI-CRD.yaml
@@ -1,25 +1,16 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: aniglobalnetworkpolicy.crd.ani.io
+  name: aninetworkpolicy.crd.ani.io
 spec:
   group: crd.ani.io
   names:
-    categories:
-    - aniglobalnetworkpolicies
-    kind: ANIGlobalNetworkPolicy
-    listKind: ANIGlobalNetworkPolicyList
-    plural: ANIGlobalNetworkPolicies
-    shortNames:
-    - agnp
-    singular: aniglobalnetworkpolicy
-  scope: Cluster
+    kind: ANINetworkPolicy
   versions:
   - name: v1
     schema:
       openAPIV3Schema:
-        description:  This is a cluster wide network policy,
-         which is applied across all the namespace in the cluster.
+        description:  This is an application wide network policy.
         properties:
           apiVersion:
             description: A string that identifies the version of ANI schema.
@@ -32,50 +23,74 @@ spec:
           spec:
             description: It is the ANI specific rule specification.
             properties:
-              selector:
-                description: It is an expression used to select a 
-                  resource on which the policies should be applied.
-                properties:
-                  labels:
-                    descriprion: An expression to select a resource based on K8s Labels.
-                    items:
-                      type: string
-                    type: array
-                  endpointSelector: 
-                    description: selects all endpoints subject to this rule.
-                    type: object
-                  nodeSelector: 
-                    descriprion: selcts the node subject to the rule.
-                    type: object
-                type: object
-              egress:
-                descriprion: It is a set of rules and action to be taken
-                  on the macthing rule on egress traffic.
-                items: 
-                  descriprion:
-                  properties:
-                    action:
-                      type: string
-                    to:                                         # can be named as destination instead of "to"
-                      descriprion:
-                      properties:
-                        target:                                 # can be named as label instead of "target"
-                          type: string
-                      type: object 
-                type: array
-              ingress:
-                descriprion: It is a set of rules and actions to be taken
-                  on matching rule on ingress traffic.
+              control-policies:
+                descriprion: List containing source, destination and rule to be 
+                  applied to the connection between them.
                 items:
-                  descriprion:
-                  properties:
-                    action:
-                      type: string
-                    from:                                        # can be named as source instead of "from"
-                      descriprion:
-                      properties:
-                        target:                                  # can be named as label instead of "target"
+                  protocol:
+                    descriprion: can be 'allow' or 'deny'.
+                    type: string
+                  source: 
+                    descriprion: the source for this particular protocol.
+                    properties:
+                      cluster:
+                        type: string
+                      node: 
+                        type: string
+                      namespace:
+                        type: string
+                      name: 
+                        type: string      
+                      ip: 
+                        type: string
+                      ports:
+                        type: string
+                      labels:
+                        items:
                           type: string
-                      type: object
+                        type: array
+                    type: object
+                  destination:
+                    descriprion: the destination for this particular protocol.
+                    properties:
+                      cluster:
+                        type: string
+                      node: 
+                        type: string
+                      namespace:
+                        type: string
+                      name: 
+                        type: string      
+                      ip: 
+                        type: string
+                      ports:
+                        type: string
+                      labels:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  order:
+                    type: integer
+                  bandwidth:
+                    type: string
+                  http:
+                    descriprion: match criteria for http requests.
+                    properties: 
+                      path:
+                        type: string
+                      method:
+                        type: string
+                    type: object
+                  rate-limit:
+                    descriprion: rate-limit for the current connection
+                    properties:
+                      units-per-second: 
+                        type: string
+                    type: object
+                  conn-type:
+                    type: string
+                  port:
+                    type: string
                 type: array
             type: object
